syntax = "proto3";

package identitymap.v1;

option go_package = "github.com/carverauto/serviceradar/proto/identitymap/v1;identitymappb";

// IdentityKind enumerates the identifier types that map to canonical device IDs.
enum IdentityKind {
  IDENTITY_KIND_UNSPECIFIED = 0;
  IDENTITY_KIND_DEVICE_ID = 1;
  IDENTITY_KIND_ARMIS_ID = 2;
  IDENTITY_KIND_NETBOX_ID = 3;
  IDENTITY_KIND_MAC = 4;
  IDENTITY_KIND_IP = 5;
  IDENTITY_KIND_PARTITION_IP = 6;
}

// IdentityKey represents a lookup key for the canonical identity map.
message IdentityKey {
  IdentityKind kind = 1;
  string value = 2;
}

// CanonicalRecord stores the canonical device identifier for a given identity key.
message CanonicalRecord {
  string canonical_device_id = 1;
  string partition = 2;
  string metadata_hash = 3;
  int64 updated_at_unix_millis = 4;
  map<string, string> attributes = 5;
}
